<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/images"
        android:backgroundTint="#DCD9D9"
        android:backgroundTintMode="screen">

    <EditText
            android:id="@+id/email_login"
            style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
            android:layout_width="256dp"
            android:layout_height="50dp"
            android:layout_marginTop="104dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Enter your email"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#131212"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.426"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/password_login"
            style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
            android:layout_width="256dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:textColor="#171717"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_login" />

    <Button
            android:id="@+id/login"
            android:layout_width="155dp"
            android:layout_height="71dp"
            android:backgroundTint="#9589B8"
            android:onClick="loginButton"
            android:text="Login"
            android:textColor="#EDE9E9"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/register_button"
            android:layout_width="134dp"
            android:layout_height="69dp"
            android:backgroundTint="#9589B8"
            android:onClick="registrationButton"
            android:text="Signup"
            android:textColor="#E6E4E4"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.814" />

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="411dp"
            android:layout_height="313dp"
            android:alpha="0.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.006" />

    <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have acount ?"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.705" />

</androidx.constraintlayout.widget.ConstraintLayout>